Added icons for projects

--- a/index.html
+++ b/index.html
@@ -25,10 +25,36 @@
         </div>
     </div>
 
-    
+    <div class="gridchat-icon">
+        <div class="icon">
+            <img src="gridchat.png">
+        <p>GridChat</p>
+        </div>
+    </div>
+
+    <div class="deepquestion-icon">
+        <div class="icon">
+            <img src="deepquestion.png">
+        <p>deep-<br>Question:</p>
+        </div>
+    </div>
+
+    <div class="quickbuck-icon">
+        <div class="icon">
+            <img src="quickbuck.jpg">
+        <p>QuickBuck</p>
+        </div>
+    </div>
+
+    <div class="weatherballoon-icon">
+        <div class="icon">
+            <img src="balloon.png">
+        <p>Weather<br>Balloon</p>
+        </div>
+    </div>
 
     <div class="bottom-nav">
-
+        <img src="github.png">
     </div>
 </body>
 </html>
