--- a/index.html
+++ b/index.html
@@ -1,60 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Ian Condon</title>
 </head>
+
 <body>
     <div class="top-nav">
         <a><img class="pear-icon" src="pear-icon.png"></a>
         <a>Projects</a>
         <a>About</a>
-        <a>Resume</a>
+        <a href="#" id="openResume">Resume</a>
         <a>Contact</a>
     </div>
 
     <div class="potluck-icon">
         <div class="icon">
             <img src="potluck.png">
-        <p>PotLuck</p>
+            <p>PotLuck</p>
         </div>
     </div>
 
     <div class="gridchat-icon">
         <div class="icon">
             <img src="gridchat.png">
-        <p>GridChat</p>
+            <p>GridChat</p>
         </div>
     </div>
 
     <div class="deepquestion-icon">
         <div class="icon">
             <img src="deepquestion.png">
-        <p>deep-<br>Question:</p>
+            <p>deep-<br>Question:</p>
         </div>
     </div>
 
     <div class="quickbuck-icon">
         <div class="icon">
             <img src="quickbuck.jpg">
-        <p>QuickBuck</p>
+            <p>QuickBuck</p>
         </div>
     </div>
 
     <div class="weatherballoon-icon">
         <div class="icon">
             <img src="balloon.png">
-        <p>Weather<br>Balloon</p>
+            <p>Weather<br>Balloon</p>
+        </div>
+    </div>
+
+    <div class="trash-icon">
+        <div class="icon">
+            <img src="trash.png">
+            <p>Trash</p>
         </div>
     </div>
 
     <div class="bottom-nav">
-        <img src="github.png">
+        <div class="nav-item">
+            <div class="start-button">
+                <a href="#" onclick="location.reload(); return false;">
+                    <p>Ian Condon</p>
+                </a>
+            </div>
+
+        </div>
+        <div class="nav-item">
+            <a href="https://github.com/Swondon">
+                <img src="github.png">
+            </a>
+        </div>
+        <div class="nav-item">
+            <a href="https://www.linkedin.com/in/swondon/">
+                <img src="linkedin.webp">
+            </a>
+        </div>
+        <div class="nav-item">
+            <a href="mailto:ianebcondon@gmail.com">
+                <img src="mail.webp" alt="Email Icon">
+            </a>
+        </div>
+
+        <div class="clock">
+            <div id="clock-time"></div>
+            <div id="clock-date"></div>
+        </div>
     </div>
+
+    <script>
+        function updateClock() {
+            const now = new Date();
+            document.getElementById('clock-time').textContent = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+            document.getElementById('clock-date').textContent = now.toLocaleDateString();
+        }
+
+        setInterval(updateClock, 1000);
+        updateClock(); // run once on load
+    </script>
+
+    <div id="resumeModal">
+        <div class="modal-content">
+            <button class="close-btn" id="closeResume">&times;</button>
+            <!-- Replace 'resume.pdf' with the path to your actual resume PDF -->
+            <iframe src="resume.pdf" title="Resume PDF"></iframe>
+        </div>
+    </div>
+
+    <script>
+        const resumeLink = document.getElementById('openResume');
+        const modal = document.getElementById('resumeModal');
+        const closeBtn = document.getElementById('closeResume');
+
+        // Open modal on Resume click
+        resumeLink.addEventListener('click', (e) => {
+            e.preventDefault();
+            modal.style.display = 'flex';
+            // Optional: prevent scrolling when modal open
+            document.body.style.overflow = 'hidden';
+        });
+
+        // Close modal on close button click
+        closeBtn.addEventListener('click', () => {
+            modal.style.display = 'none';
+            document.body.style.overflow = 'auto';
+        });
+
+        // Close modal if clicking outside modal content
+        window.addEventListener('click', (e) => {
+            if (e.target === modal) {
+                modal.style.display = 'none';
+                document.body.style.overflow = 'auto';
+            }
+        });
+    </script>
+
+    <!-- Modal container -->
+    <div id="infoModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Enter your information</h2>
+            <textarea id="infoText" rows="6" cols="40" placeholder="Write something..."></textarea>
+            <br>
+            <button id="saveInfo">Save</button>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
