Changed fontsizes and added logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="icon" href="swondon.png" type="image/png">
     <title>Ian Condon</title>
 </head>
 
@@ -66,7 +67,8 @@
         <div class="nav-item">
             <div class="start-button">
                 <a href="#" onclick="location.reload(); return false;">
-                    <p>Ian Condon</p>
+                    <img src="swondonwhite.png">
+                    <p>&nbsp;Ian Condon</p>
                 </a>
             </div>
 
