Changed dropdown menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script>
             function toggleDropdown() {
                 const dropdown = document.getElementById("dropdownContent");
-                dropdown.style.display = dropdown.style.display === "flex" ? "none" : "flex";
+                dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
             }
 
             // Optional: Close dropdown if user clicks outside
