--- a/about.html
+++ b/about.html
@@ -37,12 +37,14 @@
             padding: 40px;
             max-width: 800px;
             width: 90%;
+            max-height: 90%;
             backdrop-filter: blur(10px);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             margin: 5% auto;
             color: white;
             animation: fadeInUp 1s ease-out;
             position: relative;
+            overflow-y: auto;
             z-index: 1;
         }
 
