Added PotLuck link

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <p><strong><u>Backend:</u></strong> JavaScript, SQL, Docker (v2 using Firebase)</p>
                 <br>
                 <div class="modal-link">
-                    <a href="#">View on GitHub</a>
+                    <a href="https://github.com/Swondon/PotLuck-v1">View on GitHub</a>
 
                 </div>
 
