Added Eye2Eye link

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     server)</p>
                 <br>
                 <div class="modal-link">
-                    <a href="#">View on GitHub</a>
+                    <a href="https://github.com/Swondon/Eye2Eye">View on GitHub</a>
                 </div>
 
             </div>
