Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Essential Meta Tags -->
+    <meta name="description"
+        content="Portfolio site for Ian Condon. Projects include PotLuck, Eye2Eye, Gridchat, and more.">
+    <meta property="og:title" content="Ian Condon | Portfolio">
+    <meta property="og:description"
+        content="Explore my web development projects, creative tech ideas, and resume. Built with HTML, CSS, and love.">
+    <meta property="og:image" content="https://yourdomain.com/thumbnail.png">
+    <meta property="og:url" content="https://yourdomain.com">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="stylesheet" href="home-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
