Got rid of unnecessary comments

--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
         }
 
         function animate() {
-            ctx.fillStyle = 'rgba(2, 48, 32, 0.2)'; // green background w/ slight fade
+            ctx.fillStyle = 'rgba(2, 48, 32, 0.2)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
             hue += 2;
