Updated meta image

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Ian Condon | Portfolio">
     <meta property="og:description"
         content="Explore my web development projects, creative tech ideas, and resume. Built with HTML, CSS, and love.">
-    <meta property="og:image" content="https://yourdomain.com/thumbnail.png">
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:image" content="https://swondon.com/swondon.png">
+    <meta property="og:url" content="https://swondon.com">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="home-style.css">
