Adding honors portfolio stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://swondon.com/swondon.png">
     <meta property="og:url" content="https://swondon.com">
     <meta name="twitter:card" content="summary_large_image">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
     <link rel="stylesheet" href="home-style.css">
@@ -113,6 +113,16 @@
             <a href="#" id="openEye">
                 <img src="eye2eye.png">
                 <p>Eye2Eye</p>
+            </a>
+
+        </div>
+    </div>
+
+    <div class="honors-icon">
+        <div class="icon">
+            <a href="honors.html" id="openHonors">
+                <img src="folder.png">
+                <p>UHP Portfolio</p>
             </a>
 
         </div>
@@ -533,7 +543,7 @@
             <button class="close-btn" id="closeEye">&times;</button>
             <h1>Eye2Eye</h1>
             <div class="potluck-img-text">
-                <img src="balloon.png">
+                <img src="eye2eye.png">
                 <p class="indented">Eye2Eye is a research-driven video conferencing project that reimagines virtual
                     communication by using two webcams and spatial audio to simulate face-to-face interaction. By
                     placing participants around a virtual table and adjusting both video angles and audio direction,
